--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
+    "allure-playwright": "^3.4.2",
     "csv-parse": "^6.1.0",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "rimraf": "^5.0.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "winston": "^3.18.3"
   },
   "dependencies": {
     "fs-extra": "^11.1.1"
